moving toward c++.  this version may not work, but it is less messed up than it will be soon

--- a/powerboard/LUFA/Demos/Device/ClassDriver/VirtualSerial/makefile
+++ b/powerboard/LUFA/Demos/Device/ClassDriver/VirtualSerial/makefile
@@ -139,7 +139,7 @@ SRC = $(TARGET).c                                                 \
 
 
 # List C++ source files here. (C dependencies are automatically generated.)
-CPPSRC =
+CPPSRC = lowlevelsource.cpp
 
 
 # List Assembler source files here.
