--- a/trunk/bilibot/bilibot_node/CMakeLists.txt
+++ b/trunk/bilibot/bilibot_node/CMakeLists.txt
@@ -22,7 +22,7 @@ include_directories(
 )
 
 #uncomment if you have defined messages
-#rosbuild_genmsg()
+rosbuild_genmsg()
 #uncomment if you have defined services
 rosbuild_gensrv()
 
