added battery state info to messages also added button and general info it all comes out as a powerboard type message from bilibot_node

--- a/bilibot/bilibot_node/CMakeLists.txt
+++ b/bilibot/bilibot_node/CMakeLists.txt
@@ -22,7 +22,7 @@ include_directories(
 )
 
 #uncomment if you have defined messages
-#rosbuild_genmsg()
+rosbuild_genmsg()
 #uncomment if you have defined services
 rosbuild_gensrv()
 
