--- a/bilibot/bilibot_bringup/CMakeLists.txt
+++ b/bilibot/bilibot_bringup/CMakeLists.txt
@@ -16,6 +16,9 @@ set(EXECUTABLE_OUTPUT_PATH ${PROJECT_SOURCE_DIR}/bin)
 #set the default path for built libraries to the "lib" directory
 set(LIBRARY_OUTPUT_PATH ${PROJECT_SOURCE_DIR}/lib)
 
+rosbuild_add_executable(resetACM resetACM.c)
+target_link_libraries(resetACM usb)
+
 #uncomment if you have defined messages
 #rosbuild_genmsg()
 #uncomment if you have defined services
