--- a/trunk/bilibot/create_node/cfg/TurtleBot.cfg
+++ b/trunk/bilibot/create_node/cfg/TurtleBot.cfg
@@ -18,7 +18,7 @@ gen.add("cmd_vel_timeout", double_t, 0, "How long to wait before timing out on a
 
 gen.add("stop_motors_on_bump", bool_t, 0, "Stops motors when the bumps sensor is hit.", True)
 
-gen.add("has_gyro", bool_t, 0, "Enables or disables the gyro.", True)
+gen.add("has_gyro", bool_t, 0, "Enables or disables the gyro.", False)
 
 gen.add("gyro_scale_correction", double_t, 0, "Scaling factor for correct gyro operation.", 1.35, 0.0, 3.0)
 
