--- a/bilibot/bilibot_node/CMakeLists.txt
+++ b/bilibot/bilibot_node/CMakeLists.txt
@@ -34,3 +34,4 @@ rosbuild_gensrv()
 #rosbuild_add_executable(example examples/example.cpp)
 #target_link_libraries(example ${PROJECT_NAME})
 rosbuild_add_executable(bilibot_node src/node.cpp src/powerboard_sdk/wireformat.c src/serial.cpp)
+rosbuild_add_executable(bilibot2_node src/node2.cpp src/powerboard_sdk/wireformat.c src/serial.cpp)
