--- a/trunk/motordriver/Makefile
+++ b/trunk/motordriver/Makefile
@@ -115,6 +115,7 @@ include $(LUFA_PATH)/LUFA/makefile
 SRC = $(TARGET).c                                                 \
 	  Descriptors.c                                               \
 	  sdk/wireformat.c                                               \
+	  utility/twi.c                                               \
 	  $(LUFA_SRC_USB)                                             \
 	  $(LUFA_SRC_USBCLASS)
 
